# travsr-lang

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/c/: Cargo.toml
crates/c/src/: main.rs
crates/cpp/: Cargo.toml
crates/cpp/src/: main.rs
crates/csharp/: Cargo.toml
crates/csharp/src/: main.rs
crates/dart/: Cargo.toml
crates/dart/src/: main.rs
crates/go/: Cargo.toml
crates/go/src/: main.rs
crates/java/: Cargo.toml
crates/java/src/: main.rs
crates/kotlin/: Cargo.toml
crates/kotlin/src/: main.rs
crates/lsif/: Cargo.toml
crates/lsif/src/: lib.rs
crates/php/: Cargo.toml
crates/php/src/: main.rs
crates/python/: Cargo.toml
crates/python/src/: main.rs
crates/ruby/: Cargo.toml
crates/ruby/src/: main.rs
crates/rust/: Cargo.toml
crates/rust/src/: main.rs
crates/scala/: Cargo.toml
crates/scala/src/: main.rs
crates/scip-reader/: Cargo.toml
crates/scip-reader/examples/: inspect_enclosing.rs
crates/scip-reader/src/: lib.rs
crates/swift/: Cargo.toml
crates/swift/src/: main.rs
crates/typescript/: Cargo.toml
crates/typescript/src/: main.rs
fixtures/csharp/Animals/: Program.cs
fixtures/scala/animals/: build.sbt
fixtures/scala/animals/src/main/scala/animals/: Animals.scala
npm/: postinstall.js
npm/c/: package.json
npm/cpp/: package.json
npm/csharp/: package.json
npm/dart/: package.json
npm/dart/share/travsr-lang-dart/: emit.dart  pubspec.yaml
npm/dart/share/travsr-lang-dart/.dart_tool/: package_config.json  package_graph.json
npm/go/: package.json
npm/java/: package.json
npm/kotlin/: package.json
npm/php/: package.json
npm/python/: package.json
npm/ruby/: package.json
npm/scala/: package.json
npm/swift/: package.json
