[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Travsr Contributors"]
repository = "https://github.com/Travsr-com/travsr-lang"
rust-version = "1.75"

[workspace.dependencies]
travsr-plugin-sdk = "0.6.1"
travsr-core       = "0.6.1"
anyhow = "1"
serde_json = "1"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
