[package]
name = "travsr-lang-c"
description = "Travsr Phase B — C semantic analysis via scip-clang"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "travsr-lang-c"
path = "src/main.rs"

[dependencies]
travsr-plugin-sdk  = { workspace = true }
travsr-core        = { workspace = true }
anyhow             = { workspace = true }
tempfile           = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
