[package]
name = "travsr-lang-dart"
description = "Travsr Phase B — Dart semantic analysis via dart analyze (stub)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "travsr-lang-dart"
path = "src/main.rs"

[dependencies]
travsr-plugin-sdk  = { workspace = true }
travsr-core        = { workspace = true }
anyhow             = { workspace = true }
serde_json         = { workspace = true }
tempfile           = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
