[package]
name = "travsr-lang-go"
description = "Travsr Phase B — Go semantic analysis via scip-go"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "travsr-lang-go"
path = "src/main.rs"

[dependencies]
travsr-plugin-sdk        = { workspace = true }
travsr-core              = { workspace = true }
travsr-lang-scip-reader  = { workspace = true }
anyhow             = { workspace = true }
tempfile           = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
