[package]
name = "travsr-lsif"
description = "Minimal LSIF JSON-Lines ingestion — shared by travsr-lang packages"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
travsr-plugin-sdk = { workspace = true }
travsr-core       = { workspace = true }
anyhow = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { workspace = true }
