[package]
name = "travsr-lang-rust"
description = "Travsr Phase B — Rust semantic analysis via rust-analyzer LSIF"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "travsr-lang-rust"
path = "src/main.rs"

[dependencies]
travsr-plugin-sdk  = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
