[package]
name = "travsr-lang-scala"
description = "Travsr Phase B — Scala semantic analysis via SemanticDB"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "travsr-lang-scala"
path = "src/main.rs"

[dependencies]
travsr-plugin-sdk  = { workspace = true }
travsr-core        = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
