[package]
name = "travsr-lang-swift"
description = "Travsr Phase B — Swift structural analysis via SwiftSyntax emitter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "travsr-lang-swift"
path = "src/main.rs"

[dependencies]
travsr-plugin-sdk  = { workspace = true }
travsr-core        = { workspace = true }
anyhow             = { workspace = true }
serde_json         = { workspace = true }
tempfile           = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
