[package]
name = "travsr-lang-typescript"
description = "Travsr Phase B — TypeScript/JavaScript semantic analysis via travsr-lsif-ts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "travsr-lang-typescript"
path = "src/main.rs"

[dependencies]
travsr-plugin-sdk  = { workspace = true }
travsr-core        = { workspace = true }
travsr-lsif        = { path = "../lsif" }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
